(Grav GitSync) Automatic Commit from Richard Hoppel

--- a/pages/css/ava.css
+++ b/pages/css/ava.css
@@ -5,7 +5,7 @@ body {
 	font-family: Merriwether;
 	/*	font-family: HelveticaNeueETW01-55Rg; */
 	background: gray;
-	color: white;
+	color: black;
 }
 
 article {
